--- a/child/package.json
+++ b/child/package.json
@@ -32,8 +32,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styled-engine": "^5.4.4",
+    "@mui/styled-engine-sc": "^5.4.2",
     "axios": "^0.26.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "styled-components": "^5.3.3"
   }
 }
