--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -41,6 +41,7 @@
     "react-ga": "^3.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "serve": "^13.0.2"
   }
 }
