--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -18,6 +18,8 @@
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@popperjs/core": "2.9.1",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
@@ -34,6 +36,8 @@
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "@reduxjs/toolkit": "^1.8.0",
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "axios": "^0.26.1",
     "firebase": "^9.6.8",
     "react": "^17.0.2",
