--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -40,6 +40,7 @@
     "@sentry/tracing": "^6.18.2",
     "axios": "^0.26.1",
     "firebase": "^9.6.8",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
