--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -42,11 +42,13 @@
     "dotenv-webpack": "^7.1.0",
     "firebase": "^9.6.8",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "workbox-window": "^6.5.1"
   }
 }
