--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -22,11 +22,11 @@
     "@popperjs/core": "2.9.1",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.2",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.4.8",
     "postcss-loader": "^4.1.0",
-    "style-loader": "^3.3.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.23",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.9.0",
@@ -40,7 +40,9 @@
     "@sentry/tracing": "^6.18.2",
     "axios": "^0.26.1",
     "dotenv-webpack": "^7.1.0",
+    "file-loader": "^6.2.0",
     "firebase": "^9.6.8",
+    "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -49,6 +51,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
+    "url-loader": "^4.1.1",
     "workbox-window": "^6.5.1"
   }
 }
