--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -42,6 +42,7 @@
     "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "firebase": "^9.6.8",
+    "himalaya": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
