--- a/child/package.json
+++ b/child/package.json
@@ -2,10 +2,10 @@
   "name": "child",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --mode development",
-    "build:start": "cd dist && PORT=3001 npx serve",
-    "start": "webpack serve --open --mode development",
+    "build:start": "cd dist && PORT=3006 npx serve",
+    "start": "webpack serve --open --config webpack.dev.js",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "license": "MIT",
@@ -28,7 +28,8 @@
     "tailwindcss": "^2.0.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
